new folder structure

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,6 @@
 <h1>{{appTitle}} 🚀</h1>
 <p>Welcome Ironhacker!</p>
 
-<button type="submit">Test</button>
+<button type="submit">Test DB</button>
+<button type="submit">User Log in</button>
+<button type="submit">Admin Log in</button>
