implemented admin sign in and sign up.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,5 @@
 <h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<p>Welcome To Blog.Spot!</p>
 
-<button type="submit">Test DB</button>
-<button type="submit">User Log in</button>
-<button type="submit">Admin Log in</button>
+
+<a href="/admin">Admin</a>
