--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,24 @@
 
   <body>
 
+    <nav>
+      <ul>
+        <li id="to-left">
+          <p><a href="/"> Users - demo </a></p>
+        </li>
+        <li id="to-right">
+          <a href="/admin">Admin</a>
+
+          <form id="logout-form" action="/admin/profile/logout" method="POST">
+            <button>Logout</button>
+          </form>
+
+          <a href="/admin/profile">Profile</a> 
+        </li>
+
+      </ul>
+    </nav>
+
     {{{body}}}
 
     <script src="/js/script.js"></script>
