--- a/views/user-auth/signup.hbs
+++ b/views/user-auth/signup.hbs
@@ -1,6 +1,6 @@
 <div id="form">
   <h2>Sign Up</h2>
-  <form action="/auth/signup" method="POST">
+  <form action="/user-signup" method="POST">
 
     <label> Username
       <input type="text" name="username" placeholder="Your username" />
@@ -14,7 +14,7 @@
       <input type="password" name="password" placeholder="Your password" />
     </label>
 
-    <button type="submit">Sign Up</button>
+    <button>Create Account</button>
 
 
     {{#if errorMessage}}
