--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,7 @@
     {{{body}}}
 
     <script src="/js/script.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </body>
 
 </html>
