--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome To Blog.Spot!</p>
+{{!-- <h1>{{appTitle}} 🚀</h1> --}}
+<h2>Welcome To BlogByte!</h2>
 
 
 <a href="/admin">Admin</a>
