--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,18 +13,9 @@
     <nav>
       <ul>
         <li id="to-left">
-          <p><a href="/"> Users - demo </a></p>
+          <p><a href="/"> BlogByte Logo</a></p>
         </li>
-        <li id="to-right">
-          <a href="/admin">Admin</a>
-
-          <form id="logout-form" action="/admin/profile/logout" method="POST">
-            <button>Logout</button>
-          </form>
-
-          <a href="/admin/profile">Profile</a> 
-        </li>
-
+        
       </ul>
     </nav>
 
