create navbar partial and topics

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,10 +5,11 @@
         </div>
         <div>
             <ol>
-                <li><a href="/create-blog">create</a></li>
-                <li><a href="/explore-blog">explore</a></li>
-                <li><a href="/user-profile">profile</a></li>
-                <li><a href="/user-logout">logout</a></li>
+                <li><a href="/user-dashboard">Dashboard</a></li>
+                <li><a href="/create-blog">Create</a></li>
+                <li><a href="/explore-blog">Explore</a></li>
+                <li><a href="/user-profile">Profile</a></li>
+                <li><a href="/user-logout">Logout</a></li>
             </ol>
         </div>
     </nav>
