--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,24 @@
-{{!-- <h1>{{appTitle}} 🚀</h1> --}}
-<h2>Welcome To BlogByte!</h2>
+{{! <a href="/admin">Admin</a>
+<a href="/user-login">Log In User Account</a> }}
 
+<nav class="navbar">
 
-<a href="/admin">Admin</a>
-<a href="/user-login">Log In User Account</a>
+  <div class="nav-container">
+
+    <div class="nav-left">
+      <a href="/"><img src="/images/logo.png" alt=""></a>
+      <p class="nav-heading">BlogByte.</p>
+    </div>
+
+    <div class="nav-right">
+      <a href="#" class="nav-btn">About</a>
+      <a href="#" class="nav-btn">Explore</a>
+      <a href="#" class="nav-btn">Contact Us</a>
+      <a href="/admin" class="nav-btn log-in-btn">Admin</a>
+      <a href="/user-login" class="nav-btn log-in-btn">Log In</a>
+    </div>
+
+  </div>
+  <hr>
+
+</nav>
