--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,24 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{appTitle}}</title>
+    {{!-- CSS --}}
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/media.css">
+    {{! Google Font }}
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins:ital@1&display=swap"
+      rel="stylesheet"
+    />
+
+    {{! FONT AWESOME }}
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+
   </head>
 
   <body>
-
-    <nav>
-      <ul>
-        <li id="to-left">
-          <p><a href="/"> BlogByte Logo</a></p>
-        </li>
-        
-      </ul>
-    </nav>
-
+    <div id="load" class="active">
+      <div>E</div>
+      <div>T</div>
+      <div>Y</div>
+      <div>B</div>
+      <div>G</div>
+      <div>O</div>
+      <div>L</div>
+      <div>B</div>
+    </div>
     {{{body}}}
 
     <script src="/js/script.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
   </body>
 
 </html>
