--- a/views/admin/admin-profile.hbs
+++ b/views/admin/admin-profile.hbs
@@ -1,6 +1,24 @@
-<nav>
+{{!-- <nav class="navbar">
 
-  <div class="left">Logo</div>
+  <div class="nav-container">
+
+    <div class="nav-left">
+      <a href="/"><img src="/images/logo.png" alt=""></a>
+      <p class="nav-heading">BlogByte.</p>
+    </div>
+
+    <div class="nav-right">
+      <form id="logout-form" class="nav-btn log-in-btn" action="/admin/profile/logout" method="POST">
+        <button>Logout</button>
+      </form>
+      <a href="/user-login" class="nav-btn log-in-btn">Log In</a>
+    </div>
+
+  </div>
+  <hr>
+<nav> --}}
+
+<div class="left">Logo</div>
   <div class="right">
     <form id="logout-form" action="/admin/profile/logout" method="POST">
       <button>Logout</button>
@@ -23,3 +41,6 @@
 
   <a href="/admin/profile/delete/{{this._id}}">Delete This Profile</a>
 {{/each}}
+
+
+</nav>
