--- a/views/user-auth/signup.hbs
+++ b/views/user-auth/signup.hbs
@@ -1,24 +1,59 @@
-<div id="form">
-  <h2>Sign Up</h2>
-  <form action="/user-signup" method="POST">
+<div class="sign-in">
+  <img class="wave" src="/images/draw.png" />
+  <div class="container">
+    <div class="img">
+      <a href="/" class="log-in-home">
+        <p>BlogByte.</p>
+      </a>
+      <img src="/images/signup.svg" />
+    </div>
+    <div class="login-content">
+      <form action="/user-signup" method="post">
+        <img src="/images/profile.svg" />
+        <h2 class="title">Welcome To BlogByte</h2>
+        <div class="input-div one">
+          <div class="i">
+            <i class="fas fa-envelope"></i>
+          </div>
+          <div class="div">
+            <h5>Email</h5>
+            <input type="email" class="input" name="email" id="email" />
+          </div>
+        </div>
+        <div class="input-div one">
+          <div class="i">
+            <i class="fas fa-user"></i>
+          </div>
+          <div class="div">
+            <h5>Username</h5>
+            <input type="text" class="input" name="username" id="username" />
+          </div>
+        </div>
+        <div class="input-div pass">
+          <div class="i">
+            <i class="fas fa-lock"></i>
+          </div>
+          <div class="div">
+            <h5>Password</h5>
+            <input
+              type="password"
+              class="input"
+              name="password"
+              id="password"
+            />
+            
+          </div>
+        </div>
+        {{! <a href="#">Forgot Password?</a> }}
+        <a href="/user-login">Sign In</a>
 
-    <label> Username
-      <input type="text" name="username" placeholder="Your username" />
-    </label>
+      {{#if errorMessage}}
 
-    <label> Email
-      <input type="email" name="email" placeholder="Your email" />
-    </label>
+        <h3 class="error-message">{{errorMessage}}</h3>
 
-    <label> Password
-      <input type="password" name="password" placeholder="Your password" />
-    </label>
-
-    <button>Create Account</button>
-
-
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-    {{/if}}
-  </form>
+      {{/if}}
+        <button type="submit" class="btn">Sign In</button>
+      </form>
+    </div>
+  </div>
 </div>
