header is completed

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,54 @@
-{{! <a href="/admin">Admin</a>
-<a href="/user-login">Log In User Account</a> }}
+<header>
 
-<nav class="navbar">
+  <nav class="navbar">
 
-  <div class="nav-container">
+    <div class="nav-container">
 
-    <div class="nav-left">
-      <a href="/"><img src="/images/logo.png" alt=""></a>
-      <p class="nav-heading">BlogByte.</p>
+      <div class="nav-left">
+        <a href="/"><img src="/images/logo.png" alt="" /></a>
+        <p class="nav-heading">BlogByte.</p>
+      </div>
+
+      <div class="nav-right">
+        <a href="#" class="nav-btn">About</a>
+        <a href="#" class="nav-btn">Explore</a>
+        <a href="#" class="nav-btn">Contact Us</a>
+        <a href="/admin" class="nav-btn log-in-btn">Admin</a>
+        <a href="/user-login" class="nav-btn log-in-btn">Log In</a>
+      </div>
+
     </div>
 
-    <div class="nav-right">
-      <a href="#" class="nav-btn">About</a>
-      <a href="#" class="nav-btn">Explore</a>
-      <a href="#" class="nav-btn">Contact Us</a>
-      <a href="/admin" class="nav-btn log-in-btn">Admin</a>
-      <a href="/user-login" class="nav-btn log-in-btn">Log In</a>
+  </nav>
+
+  <section class="header-second">
+
+    <div class="hs-first">
+
+        <h1 class="hs-heading">
+            <span class="hs-heading-span"> Publish</span>Your Passion
+        </h1>
+        <h3 class="hs-subheading">
+            Find, Research and Create Your <span class="hs-heading-span">Blogs</span>
+        </h3>
+
+        <div class="header-btn">
+            <a href="/user-login">Get Started</a>
+        </div>
+
     </div>
 
-  </div>
-  <hr>
+    <div class="hs-second">
 
-</nav>
+        <img src="/images/header-blog.svg" alt="">
+
+    </div>
+
+  </section>
+</header>
+
+<section class="section-first">
+
+
+</section>
+
