--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,15 +7,35 @@
   font-family: "Poppins", sans-serif;
 
 }
+/* UTILITIES */
 a{
   text-decoration: none;
 }
+::-webkit-scrollbar{
+  width: 8px;
+}
+::-webkit-scrollbar-track{
+  background-color: black;
+}
+::-webkit-scrollbar-thumb{
+  background-color:#0F456B;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color:#1164a6;
+}
 
+
+/* HEADER */
+
+header{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(356deg,#1164a6,#bce2ff);
+}
 /* NAVBAR */
 
 .nav-container {
   display: flex;
-  background: linear-gradient(356deg,#1164a6,#bce2ff);
   height: 100px;
 }
 
@@ -72,6 +92,67 @@ a{
 }
 .nav-btn:hover::after{
   width: 100%;
+}
+
+/* HEADER SECOND */
+
+.header-second{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.hs-first{
+  color: white;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  margin-bottom: 100px;
+}
+.hs-heading{
+  margin-bottom: 21px;
+  font-size: 2.7rem;
+  font-weight: 900;
+  line-height: 58px;
+  margin-left: 29px;
+  letter-spacing: 2.5px;
+  text-shadow: 22px 22px 15px #0F456B;
+
+}
+.hs-heading-span{
+  color: #383838;
+  text-decoration: underline;
+}
+
+.hs-subheading{
+  font-size: 1.3rem;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 8px #383A38;
+    margin-bottom: 19px;
+}
+.header-btn a{
+  margin-top: 7px;
+  background-color: #cdcdcd;
+  padding: 8px 21px;
+  border-radius: 2px;
+}
+.header-btn a:hover{
+  background-color: #ffffff;
+  color:#35C4F0;
+  
+}
+
+
+
+
+.hs-second{
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -237,7 +318,7 @@ a{
 	text-align: right;
 	text-decoration: none;
 	color: #000000;
-	font-size: 0.9rem;
+	font-size: 1rem;
 	transition: .3s;
 }
 
