--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,16 +1,19 @@
-<header>
-    <nav>
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <ol>
-                <li><a href="/user-dashboard">Dashboard</a></li>
-                <li><a href="/create-blog">Create</a></li>
-                <li><a href="/explore-blog">Explore</a></li>
-                <li><a href="/user-profile">Profile</a></li>
-                <li><a href="/user-logout">Logout</a></li>
-            </ol>
-        </div>
-    </nav>
-</header>
+<nav class="nav">
+
+    <div class="nav-container">
+
+      <div class="nav-left">
+        <a href="/user-dashboard"><img src="/images/logo.png" alt="" /></a>
+        <p class="nav-heading">BlogByte.</p>
+      </div>
+
+      <div class="nav-right">
+        <a href="/user-profile" class="nav-btn">Profile</a>
+        <a href="/create-blog" class="nav-btn">Create</a>
+        <a href="/explore" class="nav-btn">Explore</a>
+        <a href="/user-logout" class="nav-btn">Logout</a>
+      </div>
+
+    </div>
+
+  </nav>
