--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -1,3 +1,26 @@
 {{> navbar}}
+<div class="first-half">
+    <h2>Hello {{username}}</h2>
 
-<h2>Hello {{username}}</h2>
+</div>
+
+<div class="second-half">
+
+    {{#each firstTwoObj}}
+
+
+    <div class="blog">
+        <h3 class="blog-creator">Username:{{this.creatorName}}</h3>
+        <h2 class="blog-title">Title:{{this.title}}</h2>
+        <p class="blog-description">Description:{{this.description}}</p>
+        <p class="blog-likes">Total Likes:{{this.likes}}</p>
+
+    </div>
+
+    {{/each}}
+
+    <div class="header-btn">
+        <a href="/explore">Explore More</a>
+    </div>
+
+</div>
