--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,16 +5,16 @@
     <div class="nav-container">
 
       <div class="nav-left">
-        <a href="/"><img src="/images/logo.png" alt="" /></a>
-        <p class="nav-heading">BlogByte.</p>
+        <a href="/"><img src="/images/blogbytes-logo.png" alt="" /></a>
+        {{!-- <p class="nav-heading">BlogByte.</p> --}}
       </div>
 
       <div class="nav-right">
-        <a href="#" class="nav-btn">About</a>
-        <a href="#" class="nav-btn">Explore</a>
-        <a href="#" class="nav-btn">Contact Us</a>
-        <a href="/admin" class="nav-btn log-in-btn">Admin</a>
-        <a href="/user-login" class="nav-btn log-in-btn">Log In</a>
+        <a href="#" class="nav-btn">ABOUT</a>
+        <a href="#" class="nav-btn">EXPLORE</a>
+        <a href="#" class="nav-btn">CONTACT</a>
+        <a href="/admin" class="nav-btn log-in-btn">ADMIN</a>
+        <a href="/user-login" class="nav-btn log-in-btn">LOGIN</a>
       </div>
 
     </div>
@@ -26,14 +26,14 @@
     <div class="hs-first">
 
         <h1 class="hs-heading">
-            <span class="hs-heading-span"> Publish</span>Your Passion
+            PUBLISH YOUR<br> PASSION
         </h1>
         <h3 class="hs-subheading">
             Find, Research and Create Your <span class="hs-heading-span">Blogs</span>
         </h3>
 
         <div class="header-btn">
-            <a href="/user-login">Get Started</a>
+            <a href="/user-login">GET STARTED</a>
         </div>
 
     </div>
