--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,15 +1,15 @@
 <header>
-    <nav>
-        <div>
-            <img src="" alt="">
+    <nav class="nav-container">
+        <div class="nav-left"> 
+            <img src="/images/blogbytes-logo.png" alt="">
         </div>
-        <div>
+        <div class="nav-right">
             <ol>
-                <li><a href="/user-dashboard">Dashboard</a></li>
-                <li><a href="/create-blog">Create</a></li>
-                <li><a href="/explore-blog">Explore</a></li>
-                <li><a href="/user-profile">Profile</a></li>
-                <li><a href="/user-logout">Logout</a></li>
+                <li><a class="nav-btn" href="/user-dashboard">Dashboard</a></li>
+                <li><a class="nav-btn" href="/create-blog">Create</a></li>
+                <li><a class="nav-btn" href="/explore-blog">Explore</a></li>
+                <li><a class="nav-btn" href="/user-profile">Profile</a></li>
+                <li><a class="nav-btn" href="/user-logout">Logout</a></li>
             </ol>
         </div>
     </nav>
