--- a/views/user-auth/signup.hbs
+++ b/views/user-auth/signup.hbs
@@ -3,14 +3,13 @@
   <div class="container">
     <div class="img">
       <a href="/" class="log-in-home">
-        <p>BlogByte.</p>
-      </a>
       <img src="/images/signup.svg" />
+      </a>
     </div>
     <div class="login-content">
       <form action="/user-signup" method="post">
         <img src="/images/profile.svg" />
-        <h2 class="title">Welcome To BlogByte</h2>
+        <h2 class="title">WELCOME TO BLOGBYTE</h2>
         <div class="input-div one">
           <div class="i">
             <i class="fas fa-envelope"></i>
