--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="nav">
 
-    <div class="nav-container">
+    <div class="nav-container nav-container-color">
 
       <div class="nav-left">
         <a href="/user-dashboard"><img src="/images/logo.png" alt="" /></a>
