--- a/views/user-auth/login.hbs
+++ b/views/user-auth/login.hbs
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="img">
       <a href="/">
-      {{!-- <img id="logo-img" src="/images/blogbytes-logo.png" class="log-in-home"/> --}}
+      <img id="logo-img" src="/images/blogbytes-logo.png" class="log-in-home"/>
       </a>
       <img src="/images/left-signin.svg">
     </div>
