implemented comment feature

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,6 +8,7 @@
       </div>
 
       <div class="nav-right">
+        <a href="/user-dashboard" class="nav-btn">Dashboard</a>
         <a href="/user-profile" class="nav-btn">Profile</a>
         <a href="/create-blog" class="nav-btn">Create</a>
         <a href="/explore" class="nav-btn">Explore</a>
