--- a/views/user-content/blog-detail.hbs
+++ b/views/user-content/blog-detail.hbs
@@ -1,4 +1,3 @@
-{{> navbar}}
 
 <h2>{{username}}</h2>
 
@@ -9,7 +8,10 @@
 <h3>Blogentry</h3>
 <p>{{blog.entry}}</p>
 
-
-
 <form action="/blog-detail/{{blog._id}}" method="POST"><button>Delete</button></form>
 <a href="/edit-blog/{{blog._id}}">Edit</a>
+
+<h3>Comments</h3>
+{{#each blog}}
+    <p>{{comments}}</p>
+{{/each}}
