user portal designing is almost done

--- a/views/admin/admin-signin.hbs
+++ b/views/admin/admin-signin.hbs
@@ -1,12 +1,19 @@
 <div class="sign-in">
   <img class="wave" src="/images/draw.png" />
   <div class="container">
+
     <div class="img">
-      <a href="/" class="log-in-home">
-        <p>BlogByte.</p>
+      <a href="/">
+       <img
+          id="logo-img"
+          src="/images/blogbytes-logo-black.png"
+          class="log-in-home"
+        /> 
       </a>
       <img src="/images/admin.svg" />
     </div>
+
+
     <div class="login-content">
       <form action="/admin" method="post">
         <img src="/images/profile.svg" />
