--- a/views/user-auth/login.hbs
+++ b/views/user-auth/login.hbs
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="img">
       <a href="/">
-      {{!-- <img id="logo-img" src="/images/blogbytes-logo.png" class="log-in-home"/> --}}
+      <img id="logo-img" src="/images/blogbytes-logo-black.png" class="log-in-home"/>
       </a>
       <img src="/images/left-signin.svg">
     </div>
@@ -12,7 +12,7 @@
     <div class="login-content">
       <form action="/user-login" method="post">
         <img src="/images/profile.svg" />
-        <h2 class="title">WLCOME TO BLOGBYTE</h2>
+        <h2 class="title">WELCOME TO BLOGBYTE</h2>
         <div class="input-div one">
           <div class="i">
             <i class="fas fa-envelope"></i>
