--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -1,26 +1,174 @@
-{{> navbar}}
-<div class="first-half">
-    <h2>Hello {{username}}</h2>
+{{! <nav class="user-nav">
 
-</div>
+  <div class="user-nav-container">
 
-<div class="second-half">
+    <div class="user-nav-left">
+      <a href="/user-dashboard"><img
+          src="/images/blogbytes-logo.png"
+          alt=""
+        /></a>
+    </div>
+
+    <div class="user-nav-right">
+      <a href="/user-profile" class="user-nav-btn">Profile</a>
+
+      <a href="/create-blog" class="user-nav-btn">Create</a>
+      <a href="/explore" class="user-nav-btn">Explore</a>
+      <a href="/user-logout" class="user-nav-btn">Logout</a>
+    </div>
+
+  </div>
+
+</nav> }}
+
+<!-- SIDEBAR -->
+<section id="sidebar">
+  <div class="user-nav-left">
+    <a href="/user-dashboard"><img
+        src="/images/blogbytes-logo-black.png"
+        alt=""
+      /></a>
+  </div>
+
+  <ul class="side-menu top">
+    <li class="active">
+      <a href="/user-dashboard">
+        <i class="bx bxs-dashboard"></i>
+        <span class="text">Dashboard</span>
+      </a>
+    </li>
+    <li>
+      <a href="/user-profile">
+        <i class="bx bxs-shopping-bag-alt"></i>
+        <span class="text">Profile</span>
+      </a>
+    </li>
+    <li>
+      <a href="/create-blog">
+        <i class="bx bxs-doughnut-chart"></i>
+        <span class="text">Create-Blog</span>
+      </a>
+    </li>
+    <li>
+      <a href="/explore">
+        <i class="bx bxs-message-dots"></i>
+        <span class="text">Explore</span>
+      </a>
+    </li>
+
+  </ul>
+  <ul class="side-menu">
+
+    <li>
+      <a href="/user-logout" class="logout">
+        <i class="bx bxs-log-out-circle"></i>
+        <span class="text">Logout</span>
+      </a>
+    </li>
+  </ul>
+</section>
+<!-- SIDEBAR -->
+
+<!-- CONTENT -->
+<section id="content">
+  <!-- NAVBAR -->
+  <nav>
+    <i class="bx bx-menu"></i>
+    <a href="/explore" class="nav-link">Explore More Blogs</a>
+    <form action="#">
+      <div class="form-input">
+        <input type="search" placeholder="Search..." />
+        <button type="submit" class="search-btn"><i
+            class="bx bx-search"
+          ></i></button>
+      </div>
+    </form>
+    <input type="checkbox" id="switch-mode" hidden />
+    <label for="switch-mode" class="switch-mode"></label>
+
+    <a href="/user-profile" class="profile">
+      <img src="/images/profile.svg" />
+    </a>
+  </nav>
+  <!-- NAVBAR -->
+
+  <!-- MAIN -->
+  <main>
+    <div class="head-title">
+      <div class="left">
+        <h1>Dashboard</h1>
+        <ul class="breadcrumb">
+          <li>
+            <a href="#">Dashboard</a>
+          </li>
+          <li><i class="bx bx-chevron-right"></i></li>
+          <li>
+            <a class="active" href="/user-dashboard">Home</a>
+          </li>
+        </ul>
+      </div>
+      <a href="#" class="btn-download">
+        <i class="bx bx-user"></i>
+        <span class="text">Welcome {{username}}</span>
+      </a>
+    </div>
+
+    <div class="table-data">
+
+      <div class="order">
+        <div class="head">
+          <h3>Most Liked</h3>
+
+          <h3
+            class="user-blog-creator"
+          >Username:{{firstTwoObj.0.creatorName}}</h3>
+          <h2 class="user-blog-title">Title:{{firstTwoObj.0.title}}</h2>
+          <p
+            class="user-blog-description"
+          >Description:{{firstTwoObj.0.description}}</p>
+          <p class="user-blog-likes">Total Likes:{{firstTwoObj.0.likes}}</p>
+
+        </div>
+
+      </div>
+
+      <div class="order">
+        <div class="head">
+          <h3>Second Most Liked</h3>
+          <h3
+            class="user-blog-creator"
+          >Username:{{firstTwoObj.1.creatorName}}</h3>
+          <h2 class="user-blog-title">Title:{{firstTwoObj.1.title}}</h2>
+          <p
+            class="user-blog-description"
+          >Description:{{firstTwoObj.1.description}}</p>
+          <p class="user-blog-likes">Total Likes:{{firstTwoObj.1.likes}}</p>
+        </div>
+
+      </div>
+    </div>
+  </main>
+</section>
+
+{{!-- <section>
+
+  <div class="user-second-half">
 
     {{#each firstTwoObj}}
 
+      <div class="user-blog">
+        <h3 class="user-blog-creator">Username:{{this.creatorName}}</h3>
+        <h2 class="user-blog-title">Title:{{this.title}}</h2>
+        <p class="user-blog-description">Description:{{this.description}}</p>
+        <p class="user-blog-likes">Total Likes:{{this.likes}}</p>
 
-    <div class="blog">
-        <h3 class="blog-creator">Username:{{this.creatorName}}</h3>
-        <h2 class="blog-title">Title:{{this.title}}</h2>
-        <p class="blog-description">Description:{{this.description}}</p>
-        <p class="blog-likes">Total Likes:{{this.likes}}</p>
-
-    </div>
+      </div>
 
     {{/each}}
 
-    <div class="header-btn">
-        <a href="/explore">Explore More</a>
+    <div class="user-header-btn">
+      <a href="/explore">Explore More</a>
     </div>
 
-</div>
+  </div>
+</section> --}}
