fixing missing link

--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -129,7 +129,7 @@
   </main>
 </section>
 
-{{!-- <section>
+<section>
 
   <div class="user-second-half">
 
@@ -141,9 +141,6 @@
         <p class="user-blog-description">Description:{{this.description}}</p>
         <p class="user-blog-likes">Total Likes:{{this.likes}}</p>
 
-<<<<<<< HEAD
-      </div>
-=======
     <div class="blog">
         <h3 class="blog-creator">Username:{{this.creatorName}}</h3>
         <h2 class="blog-title">Title:{{this.title}}</h2>
@@ -153,7 +150,6 @@
             <p class="blog-comments">Comments: {{this}}</p>
         {{/each}}
     </div>
->>>>>>> main
 
     <h3>Write a comment:</h3>
     <form action="/user-dashboard/{{this.blogId}}" method="POST">
@@ -165,16 +161,13 @@
 
     {{/each}}
 
-<<<<<<< HEAD
     <div class="user-header-btn">
       <a href="/explore">Explore More</a>
-=======
     
 
     <div class="header-btn">
         <a href="/explore">Explore More</a>
->>>>>>> main
     </div>
 
   </div>
-</section> --}}
+</section>
