--- a/views/user-content/explore.hbs
+++ b/views/user-content/explore.hbs
@@ -99,7 +99,7 @@
                 <h3 class="blog-username">Username:{{this.creator.username}}</h3>
                 <h3 class="blog-likes">Likes:{{this.likes}}</h3>
 
-                <a href="/explore-blog/{{this._id}}">Read In Detail</a>
+                {{!-- <a href="/explore-blog/{{this._id}}">Read In Detail</a> --}}
             </div>
         </a>
     </div>
@@ -115,7 +115,7 @@
 
 
 
-{{!-- <section class="explore">
+<section class="explore">
 
     <h2 class="explore-heading">
         Explore More Blogs
@@ -139,4 +139,4 @@
 
     {{/each }}
 
-</section>  --}}
+</section> 
