--- a/views/user-content/profile.hbs
+++ b/views/user-content/profile.hbs
@@ -110,7 +110,7 @@
       <div class="order">
         <div class="head">
           <div class="short-blog">
-            <a href="/profile" class="short-blog-link">
+            <a href="/blog-detail/{{this._id}}" class="short-blog-link">
               <div class="short-blog-div">
                 <h3 class="blog-topic">Topic:{{this.topic}}</h3>
                 <h3 class="blog-name">Title:{{this.title}}</h3>
